GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/AB_Activities_Board_Alumni__c.field-meta.xml
<CustomField>
    <fullName>AB_Activities_Board_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AB (Activities Board) Alumni</label>
    <type>Checkbox</type>
</CustomField>