GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/AB_Tech_Alumni__c.field-meta.xml
<CustomField>
    <fullName>AB_Tech_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AB Tech Alumni</label>
    <type>Checkbox</type>
</CustomField>