GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Alpha_Phi_Omega__c.field-meta.xml
<CustomField>
    <fullName>Alpha_Phi_Omega__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alpha Phi Omega</label>
    <type>Checkbox</type>
</CustomField>