GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Alumni_Association_News__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Association_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alumni Association News</label>
    <type>Checkbox</type>
</CustomField>