GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Buggy_Alumni_Association_BAA__c.field-meta.xml
<CustomField>
    <fullName>Buggy_Alumni_Association_BAA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buggy Alumni Association (BAA)</label>
    <type>Checkbox</type>
</CustomField>