GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/BXA_Intercollege_Degree_Programs__c.field-meta.xml
<CustomField>
    <fullName>BXA_Intercollege_Degree_Programs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BXA Intercollege Degree Programs</label>
    <type>Checkbox</type>
</CustomField>