GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Canada_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Canada_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canada Opt In</label>
    <type>Checkbox</type>
</CustomField>