GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Carnegie_Mellon_Black_Alumni_Assoc__c.field-meta.xml
<CustomField>
    <fullName>Carnegie_Mellon_Black_Alumni_Assoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carnegie Mellon Black Alumni Assoc.</label>
    <type>Checkbox</type>
</CustomField>