GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Carnegie_Mellon_News__c.field-meta.xml
<CustomField>
    <fullName>Carnegie_Mellon_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carnegie Mellon News</label>
    <type>Checkbox</type>
</CustomField>