GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Class_Notes__c.field-meta.xml
<CustomField>
    <fullName>Class_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Class Notes</label>
    <type>Checkbox</type>
</CustomField>