GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/cmuOUT__c.field-meta.xml
<CustomField>
    <fullName>cmuOUT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>cmuOUT</label>
    <type>Checkbox</type>
</CustomField>