GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/College_of_Engineering_CIT__c.field-meta.xml
<CustomField>
    <fullName>College_of_Engineering_CIT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>College of Engineering/CIT</label>
    <type>Checkbox</type>
</CustomField>