GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/College_of_Fine_Arts__c.field-meta.xml
<CustomField>
    <fullName>College_of_Fine_Arts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>College of Fine Arts</label>
    <type>Checkbox</type>
</CustomField>