GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Computational_Finance_MSCF__c.field-meta.xml
<CustomField>
    <fullName>Computational_Finance_MSCF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Computational Finance (MSCF)</label>
    <type>Checkbox</type>
</CustomField>