GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Delta_Upsilon__c.field-meta.xml
<CustomField>
    <fullName>Delta_Upsilon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delta Upsilon</label>
    <type>Checkbox</type>
</CustomField>