GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Dietrich_College__c.field-meta.xml
<CustomField>
    <fullName>Dietrich_College__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dietrich College</label>
    <type>Checkbox</type>
</CustomField>