GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Heinz_College__c.field-meta.xml
<CustomField>
    <fullName>Heinz_College__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heinz College</label>
    <type>Checkbox</type>
</CustomField>