GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/HispanicLatino_Alumni_Assoc__c.field-meta.xml
<CustomField>
    <fullName>HispanicLatino_Alumni_Assoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hispanic-Latino Alumni Assoc.</label>
    <type>Checkbox</type>
</CustomField>