GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Is_Tepper__c.field-meta.xml
<CustomField>
    <fullName>Is_Tepper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tepper Prefs Visible</label>
    <type>Checkbox</type>
</CustomField>