GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Kiltie_Band_Alumni__c.field-meta.xml
<CustomField>
    <fullName>Kiltie_Band_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kiltie Band Alumni</label>
    <type>Checkbox</type>
</CustomField>