GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Lifelong_Learning__c.field-meta.xml
<CustomField>
    <fullName>Lifelong_Learning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lifelong Learning</label>
    <type>Checkbox</type>
</CustomField>