GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Margaret_Morrison__c.field-meta.xml
<CustomField>
    <fullName>Margaret_Morrison__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Margaret Morrison</label>
    <type>Checkbox</type>
</CustomField>