GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Mellon_College_of_Science__c.field-meta.xml
<CustomField>
    <fullName>Mellon_College_of_Science__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mellon College of Science</label>
    <type>Checkbox</type>
</CustomField>