GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/No_Communication__c.field-meta.xml
<CustomField>
    <fullName>No_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Communication</label>
    <type>Checkbox</type>
</CustomField>