GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/No_Solicitations__c.field-meta.xml
<CustomField>
    <fullName>No_Solicitations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Solicitations</label>
    <type>Checkbox</type>
</CustomField>