GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Opt_out_of_all_Tepper_School_emails__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_of_all_Tepper_School_emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused in preference center, used only for initial data migration.</description>
    <label>Opt out of all Tepper School emails</label>
    <type>Checkbox</type>
</CustomField>