GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Parents_and_Families_News__c.field-meta.xml
<CustomField>
    <fullName>Parents_and_Families_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parents and Families News</label>
    <type>Checkbox</type>
</CustomField>