GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Piper__c.field-meta.xml
<CustomField>
    <fullName>Piper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Piper</label>
    <type>Checkbox</type>
</CustomField>