GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Piper_Do_Not_Track__c.field-meta.xml
<CustomField>
    <fullName>Piper_Do_Not_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Piper Do Not Track</label>
    <type>Checkbox</type>
</CustomField>