GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email__c</fullName>
    <label>Preferred Email</label>
    <type>Email</type>
</CustomField>