GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Preferred_Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email_Type__c</fullName>
    <label>Preferred Email Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>