GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Preferred_Region_1__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Region_1__c</fullName>
    <formula>TEXT(Contact__r.Account.Preferred_Region_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Region 1</label>
    <type>Text</type>
</CustomField>