GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Preferred_Region_3__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Region_3__c</fullName>
    <label>Preferred Region 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Region</valueSetName>
    </valueSet>
</CustomField>