GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Professional_Career_Development__c.field-meta.xml
<CustomField>
    <fullName>Professional_Career_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Professional/Career Development</label>
    <type>Checkbox</type>
</CustomField>