GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Regional_Network_Emails__c.field-meta.xml
<CustomField>
    <fullName>Regional_Network_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regional Network Emails</label>
    <type>Checkbox</type>
</CustomField>