GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Research_News__c.field-meta.xml
<CustomField>
    <fullName>Research_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Research News</label>
    <type>Checkbox</type>
</CustomField>