GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Reunion__c.field-meta.xml
<CustomField>
    <fullName>Reunion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reunion</label>
    <type>Checkbox</type>
</CustomField>