GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/School_of_Computer_Science__c.field-meta.xml
<CustomField>
    <fullName>School_of_Computer_Science__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School of Computer Science</label>
    <type>Checkbox</type>
</CustomField>