GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Scotch_n_Soda_Alumni__c.field-meta.xml
<CustomField>
    <fullName>Scotch_n_Soda_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scotch&apos;n&apos;Soda Alumni</label>
    <type>Checkbox</type>
</CustomField>