GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Student_Updates__c.field-meta.xml
<CustomField>
    <fullName>Student_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student Updates</label>
    <type>Checkbox</type>
</CustomField>