GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Supporting_CMU__c.field-meta.xml
<CustomField>
    <fullName>Supporting_CMU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supporting CMU</label>
    <type>Checkbox</type>
</CustomField>