GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Supporting_Tepper__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Tepper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supporting Tepper</label>
    <type>Checkbox</type>
</CustomField>