GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Tartan_Crew_Alumni_Network__c.field-meta.xml
<CustomField>
    <fullName>Tartan_Crew_Alumni_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tartan Crew Alumni Network</label>
    <type>Checkbox</type>
</CustomField>