GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Tepper_Events__c.field-meta.xml
<CustomField>
    <fullName>Tepper_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tepper Events</label>
    <type>Checkbox</type>
</CustomField>