GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Tepper_Lifelong_Learning__c.field-meta.xml
<CustomField>
    <fullName>Tepper_Lifelong_Learning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tepper Lifelong Learning</label>
    <type>Checkbox</type>
</CustomField>