GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Tepper_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Tepper_Magazine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tepper Magazine</label>
    <type>Checkbox</type>
</CustomField>