GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Tepper_Regional_Chapter_Emails__c.field-meta.xml
<CustomField>
    <fullName>Tepper_Regional_Chapter_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tepper Regional Chapter Emails</label>
    <type>Checkbox</type>
</CustomField>