GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Tepper_Reunion__c.field-meta.xml
<CustomField>
    <fullName>Tepper_Reunion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tepper Reunion</label>
    <type>Checkbox</type>
</CustomField>