GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Tepper_School_News__c.field-meta.xml
<CustomField>
    <fullName>Tepper_School_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tepper School News</label>
    <type>Checkbox</type>
</CustomField>