GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/The_Tartan_Alumni_Network__c.field-meta.xml
<CustomField>
    <fullName>The_Tartan_Alumni_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <label>The Tartan Alumni Network</label>
    <type>Checkbox</type>
</CustomField>