GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Unsubscribe_from_all_email_subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_from_all_email_subscriptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>REF: T-772489 Unsubscribe from all email subscriptions</description>
    <label>Unsubscribe from all email subscriptions</label>
    <type>Checkbox</type>
</CustomField>