GoalTracker/force-app/main/default/objects/Marketing_Preference__c/fields/Weekly_Event_Email__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Event_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekly Event Email</label>
    <type>Checkbox</type>
</CustomField>